이호빈 커밋

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 			<nav class="nav-menu">
 				<a href="/user/job_posting/job_posting" class="nav-item active">개발자 채용</a> <a href="/user/resume/resume_management"
 					class="nav-item">이력서</a> <a href="/user/tools/resume_coach" class="nav-item">취업 TOOL</a> <a
-					href="#" class="nav-item">고객센터</a>
+					href="/user/help/help" class="nav-item">고객센터</a>
 			</nav>
 		</div>
 
