이호빈 커밋 완료하였습니다

--- a/src/main/resources/templates/user/help/help.html
+++ b/src/main/resources/templates/user/help/help.html
@@ -7,7 +7,7 @@
     <th:block th:replace="~{fragments/external_file :: cdn_block}"></th:block>
     <link rel="stylesheet" th:href="@{/user/css/header.css}" />
     <link rel="stylesheet" th:href="@{/user/css/footer.css}" />
-    <link rel="stylesheet" th:href="@{/user/css/help.css}"/>
+    <link rel="stylesheet" th:href="@{/user/help/help.css}"/>
     <style type="text/css">
     </style>
 </head>
