--- a/src/main/resources/templates/user/main_page.html
+++ b/src/main/resources/templates/user/main_page.html
@@ -116,9 +116,9 @@ setInterval(() => moveSlide(1), 5000);
     <p class="user-welcome">유연수님 반가워요</p>
     <p class="user-email">yeonsu@naver.com</p>
     <div class="user-buttons">
-      <a th:href="@{/user/resume/resume_management}"  class="button-link">이력서작성</a>
-       <button class="button-style">마이페이지</button>
-       </div>
+      <button>이력서작성</button>
+      <button>마이페이지</button>
+    </div>
   </div>
 
   <h2 style="color: #1DD45A;">Notice</h2>
