--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -13,6 +13,9 @@
 <script type="text/javascript">
 $(function(){
 	
+	//이메일 중복 체크 ajax
+	ckEmailDupl();
+	
 	//카카오맵 주소 찾기
 	document.getElementById("openKakaoMap").addEventListener("click", openKakaoMap);
 	
@@ -294,6 +297,47 @@ function openKakaoMap(){
 	}).open();
 }
 
+//이메일 중복 체크 ajax
+function ckEmailDupl(){
+	document.getElementById("email").addEventListener("input",function(){
+		const isEmailDupl ="이미 등록된 이메일입니다.";
+		let emailText = document.getElementById("email").value;
+		
+		$.ajax({
+			url : "/ckEmailDupl",
+			type : "GET",
+			dataType: "json",
+			//type : "POST",  									-> 컨트롤러에서 @RequestBody EmailDTO dto로 받아야함
+			//contentType: "application/json", 	-> 컨트롤러에서 @RequestBody EmailDTO dto로 받아야함
+			//data: JSON.stringfy(jsonObj), -> POST, PUT, PATCH 같은 본문을 사용하는 요청에서 쓰기 
+			data : {
+				email : emailText
+			},
+			success : function(reponse){
+				if(reponse.duplicate){ //중복됨
+					document.getElementById("emailDuple").textContent=reponse.message;
+					document.getElementById("emailDuple").style.display="block";
+					document.getElementById("codeBtn").disabled=true;
+				} else { //중복안됨
+					document.getElementById("emailDuple").textContent=reponse.message;
+					document.getElementById("emailDuple").style.display="none";
+					document.getElementById("codeBtn").disabled=false;
+				}
+			},
+			error : function(xhr, status, error){
+				console.error("이메일 중복 체크 실패:");
+				console.error("status: ", status);
+				console.error("HTTP 상태코드: ", xhr.status);
+				console.error("에러 메시지: ", error);
+				console.error("응답 본문: ", xhr.responseText);
+
+				alert("서버 통신 중 오류가 발생했습니다. 잠시 후 다시 시도해주세요.");
+			}
+		});
+		
+	});
+}
+
 </script>
 </head>
 <body>
@@ -332,6 +376,7 @@ function openKakaoMap(){
                 <!-- <div id="timer" style="margin-top: 5px; color: red; font-weight: bold;"></div> -->
                 <div id="verification-error" style="margin-top: 5px; color: red; font-weight: bold;"></div>
                 <div id="verification-success" style="margin-top: 5px; color: green; font-weight: bold; display: none; font-size: 12px;">인증에 성공하셨습니다.</div>
+                <div id="emailDuple" style="margin-top: 5px; color: red; font-weight: bold;"></div>
             </div>
 
             <div class="form-group">
