--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -43,7 +43,7 @@
 	        <td>기업홈</td>
 	        <td>지원자 관리</td>
 	        <td>공고 관리</td>
-	        <td>인재 관리</td>
+	        <td><a th:href="@{/corp/talentPool/talent_pool}">인재 관리</a></td>
 	        <td>기업상품안내</td>
 	        <td>회원정보관리</td>
 	      </tr>
