--- a/src/main/resources/static/corp/mainCss/Header.css
+++ b/src/main/resources/static/corp/mainCss/Header.css
@@ -219,3 +219,10 @@
 	background-color: #00DD6D;
 	padding: 8px 12px;
 }
+/* 헤더 a 태그 적용해도 디자인 유지 */
+.corp-main-menu a {
+  color: inherit;    
+  text-decoration: none; 
+  font-weight: inherit;  
+  font-family: inherit;  
+}
