--- a/src/main/resources/templates/admin/admin_login.html
+++ b/src/main/resources/templates/admin/admin_login.html
@@ -35,7 +35,7 @@
         </form>
         
         <div class="links">
-            <a href="/admin/register">회원가입</a>
+            <a href="/admin_register">회원가입</a>
             <span class="divider">|</span>
             <a href="/admin/find-id">아이디 찾기</a>
             <span class="divider">|</span>
