--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -13,6 +13,14 @@
 <script type="text/javascript">
 $(function(){
 	
+	isForYou();
+	
+	//비밀번호 규정에 맞는지 확인여부UI
+	isRightPassword();
+	
+	//비밀번호 확인 동일 여부
+	chkPasswordOneNTwo();
+	
 	//이메일 중복 체크 ajax
 	ckEmailDupl();
 	
@@ -75,10 +83,17 @@ $(function(){
 		
 		//비밀번호
 		const password = document.getElementById("password").value.trim();
+		const password2 = document.getElementById("password2").value.trim();
 	  const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
     	if (!pwPattern.test(password)) {
       alert("비밀번호는 8자 이상이며, 영문 대문자, 소문자, 숫자, 특수문자를 모두 포함해야 합니다.");
       isEverythingOk = false;
+      return false;
+    }
+    if(password != password2){
+    	alert("비밀번호가 서로 일치하지 않습니다.");
+    	document.getElementById('password2').focus();
+    	isEverythingOk = false;
       return false;
     }
 		
@@ -338,8 +353,84 @@ function ckEmailDupl(){
 	});
 }
 
+//올바른 비밀번호 확인 여부(편의성)
+function isRightPassword(){
+	document.getElementById('password').addEventListener('input', function(){
+		let passwordInput = document.getElementById('password');
+		const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
+		if(!pwPattern.test(passwordInput.value)){
+			console.log(pwPattern.test(passwordInput.value));
+			passwordInput.style.border = ''; //일단 아무색상 안줘 
+		} else {
+			passwordInput.style.border = '2px solid #18C65D';
+		}
+	});
+}
+
+//비밀번호 확인 일치 여부 
+function chkPasswordOneNTwo(){
+	document.getElementById('password2').addEventListener('input', function(){
+		let password = document.getElementById('password').value;
+		let password2 = document.getElementById('password2').value;
+		if(password != password2){
+			document.getElementById('password2').style.border = '2px solid red';
+		} else {
+			document.getElementById('password2').style.border = '2px solid #18C65D';
+		}
+		
+	})
+	
+}
+
+//숫자기입창에 하이픈- 자동기입 해주는 편의성 함수
+function isForYou(){
+	document.getElementById("phone").addEventListener('input', function(){
+		//숫자만 남기고 제거
+		let raw = this.value.replace(/[^0-9]/g, ''); // 숫자만 남김
+		
+		if(raw.length > 11) {
+			raw = raw.slice(0, 11);
+		}
+		
+		let formatted = '';
+		
+    if (raw.length >= 11) {
+        formatted = raw.slice(0, 3) + '-' + raw.slice(3, 7) + '-' + raw.slice(7, 11);
+      } else if (raw.length >= 8) {
+        formatted = raw.slice(0, 3) + '-' + raw.slice(3, 7) + '-' + raw.slice(7);
+      } else if (raw.length >= 4) {
+        formatted = raw.slice(0, 3) + '-' + raw.slice(3);
+      } else {
+        formatted = raw;
+      }
+    this.value = formatted;
+	});
+	
+	document.getElementById("birth").addEventListener('input', function(){
+		// 숫자만 남기고 나머지는 제거
+	  let raw = this.value.replace(/[^0-9]/g, '');
+	  // 최대 8자리까지만 자르기
+	  if (raw.length > 8) raw = raw.slice(0, 8);
+	  
+	  let formatted = '';
+	  
+	  if (raw.length >= 5) {
+	    formatted = raw.slice(0, 4) + '-' + raw.slice(4, 6);
+	    if (raw.length >= 7) {
+	      formatted += '-' + raw.slice(6, 8);
+	    }
+	  } else if (raw.length >= 1) {
+	    formatted = raw;
+	  }
+
+	  this.value = formatted;
+	});
+	
+	
+	
+}
+	
 </script>
-</head>
 <body>
  <div class="header">
         <div class="header-content">
@@ -382,6 +473,11 @@ function ckEmailDupl(){
             <div class="form-group">
                 <label class="form-label">비밀번호</label>
                 <input type="password" id="password" name="password" class="form-input" placeholder="8~16자(영문 대소문자/숫자/특수문자, 모두 조합)" maxlength="16">
+            </div>
+            
+            <div class="form-group">
+                <label class="form-label">비밀번호 확인</label>
+                <input type="password" id="password2" class="form-input" placeholder="비밀번호 확인" maxlength="16">
             </div>
 
             <div class="form-group">
