--- a/src/main/resources/templates/login/joinCorpForm.html
+++ b/src/main/resources/templates/login/joinCorpForm.html
@@ -13,6 +13,12 @@
 <script type="text/javascript">
 $(function(){
 	
+	//비밀번호 규정에 맞는지 확인여부UI
+	isRightPassword();
+	
+	//비밀번호 확인 일치 여부
+	chkPasswordOneNTwo();
+	
 	//이메일 중복 ajax 함수
 	ckEmailDupl();
 	
@@ -72,6 +78,10 @@ $(function(){
 			return false;
 		}
 		
+		//사업자등록번호에서 하이픈 삭제
+		let realCorpNo = document.getElementById('corpNo').value.replace(/[^0-9]/g, "");
+		document.getElementById('corpNo').value = realCorpNo;
+		
 		//기업인증(파일) 여부
 		const fileInput = document.getElementById('upfile');
 		const file = fileInput.files[0];
@@ -121,9 +131,16 @@ $(function(){
 		//비밀번호
 		const password = document.getElementById("password").value.trim();
 	  const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
-    	if (!pwPattern.test(password)) {
+   	if (!pwPattern.test(password)) {
       alert("비밀번호는 8자 이상이며, 영문 대문자, 소문자, 숫자, 특수문자를 모두 포함해야 합니다.");
       isEverythingOk = false;
+      return false;
+    }
+   	const password2 = document.getElementById("password2").value.trim();
+    if(password != password2){
+    	alert("비밀번호가 서로 일치하지 않습니다.");
+    	document.getElementById('password2').focus();
+    	isEverythingOk = false;
       return false;
     }
 /* 		
@@ -439,14 +456,34 @@ function chkCorpNum(){
 	
 	//사업자 등록번호 조회 API 호출
 	function callAPI(){
-		const input = document.getElementById("corpNo");
-		let corpNo = input.value.replace(/[^0-9]/g, "");  // 숫자 외 제거
-		input.value = corpNo; // 입력창에도 정제된 숫자만 다시 넣어줌
+		let corpNo = document.getElementById("corpNo").value;
+		let raw = corpNo.replace(/[^0-9]/g, "");  // 숫자 외 제거
 		
-		if (corpNo.length == 10){
-			//alert('10자리');
+		if(raw.length > 11){
+			raw = raw.slice(0,11);
+		}
+		
+		let formatted = '';
+		
+		if(raw.length >= 11){
+			formatted = raw.slice(0, 3) + '-' + raw.slice(3, 5) + '-' + raw.slice(5, 10);
+		} else if(raw.length >= 6) {
+			formatted = raw.slice(0, 3) + '-' + raw.slice(3, 5) + '-' + raw.slice(5);
+		} else if(raw.length >= 4) {
+			formatted = raw.slice(0, 3) + '-' + raw.slice(3);
+		} else if (raw.length >= 1) {
+			formatted = raw.slice(0);
+		}
+		
+	  document.getElementById("corpNo").value = formatted;
+	  
+		console.log("raw : " + raw);
+		console.log("formatted : " + formatted);
+		console.log("corpNo : " + corpNo);
+		
+		if (raw.length == 10){
 			var data = {
-				    "b_no": [corpNo] // 사업자번호 "xxxxxxx" 로 조회 시,
+				    "b_no": [raw] // 사업자번호 "xxxxxxx" 로 조회 시,
 				   }; 
 			let apiKey = "f2XGVPM83eg%2B2DjAAuAr6wEkvRlk4KwQYLDV1WkrveBZOQ6upT8O2otcjEJEiqqllEIhN%2B2KvRi2EKceHA5fJQ%3D%3D";	   
 				$.ajax({
@@ -597,6 +634,36 @@ function ckEmailDupl(){
 		
 	});
 }
+
+//올바른 비밀번호 확인 여부(편의성)
+function isRightPassword(){
+	document.getElementById('password').addEventListener('input', function(){
+		let passwordInput = document.getElementById('password');
+		const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
+		if(!pwPattern.test(passwordInput.value)){
+			console.log(pwPattern.test(passwordInput.value));
+			passwordInput.style.border = ''; //일단 아무색상 안줘 
+		} else {
+			passwordInput.style.border = '2px solid #18C65D';
+		}
+	});
+}
+
+//비밀번호 확인 여부 
+function chkPasswordOneNTwo(){
+	document.getElementById('password2').addEventListener('input', function(){
+		let password = document.getElementById('password').value;
+		let password2 = document.getElementById('password2').value;
+		if(password != password2){
+			document.getElementById('password2').style.border = '2px solid red';
+		} else {
+			document.getElementById('password2').style.border = '2px solid #18C65D';
+		}
+		
+	})
+	
+}
+
 </script>
 </head>
 <body>
@@ -621,7 +688,7 @@ function ckEmailDupl(){
         <form id="frm" th:action="@{/corp/joinProcess}" method="post" enctype="multipart/form-data">
             <div class="form-group-corpNo">
               <label class="form-label" style="font-weight: bold;">사업자등록번호</label>
-              <input type="text" id="corpNo" name="corpNo" class="form-input" placeholder="사업자 등록번호 입력(숫자 10자리)" maxlength="10">
+              <input type="text" id="corpNo" name="corpNo" class="form-input" placeholder="사업자 등록번호 직접 입력(숫자 10자리)" >
             </div>
             <div>
             	<!-- 모두 input으로 ajax처리중  -->
@@ -735,8 +802,13 @@ function ckEmailDupl(){
             </div>
 
             <div class="form-group">
-                <label class="form-label">비밀번호</label>
-                <input type="password" id="password" name="password" class="form-input" placeholder="8~16자(영문 대소문자/숫자/특수문자, 모두 조합)" maxlength="16">
+              <label class="form-label">비밀번호</label>
+              <input type="password" id="password" name="password" class="form-input" placeholder="8~16자(영문 대소문자/숫자/특수문자, 모두 조합)" maxlength="16">
+            </div>
+            
+            <div class="form-group">
+	            <label class="form-label">비밀번호 확인</label>
+	            <input type="password" id="password2" class="form-input" placeholder="비밀번호 확인" maxlength="16">
             </div>
 <!--             
             <div class="form-group">
